--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,4 +11,6 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Release
+      env:
+        GRAVITYFORM_LICENSE_KEY: ${{ secrets.GRAVITYFORM_LICENSE_KEY }}
       run: php .github/scripts/release.php
