--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wp-premium/gravityforms",
+    "name": "pronamic/gravityforms",
     "type": "wordpress-plugin",
     "autoload": {
         "classmap": [
