Remove autoload classmap, was not working.
PHP Fatal error:  require_once(): Failed opening required '/includes/addon/class-gf-addon.php'.

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,4 @@
 {
     "name": "pronamic/gravityforms",
-    "type": "wordpress-plugin",
-    "autoload": {
-        "classmap": [
-            "."
-        ]
-    }
+    "type": "wordpress-plugin"
 }
